--- a/Moon_eqc_LRO_NAC_Mosaic_26N004E_50cmp/config.json
+++ b/Moon_eqc_LRO_NAC_Mosaic_26N004E_50cmp/config.json
@@ -7,6 +7,6 @@
   "Abstract": "这是使用月球勘测轨道飞行器任务中的月球勘测轨道器相机（LROC）窄角相机（NAC）图像生成的可见图像马赛克。这些图像是使用数字高程模型（DEM）进行正射校正的，该模型是根据LROC NAC立体图像创建的（如果可用），或LRO的月球轨道飞行器激光高度表（LOLA）全球DEM。马赛克是以与收集单个LROC NAC图像相同的分辨率生成的，该分辨率约为0.5米/像素。马赛克被水平配准到LOLA全球DEM中。",
   "Projection": "urn:ogc:def:crs:EPSG::104903",
   "Preview": "{MoonImage}\\Moon_eqc_LRO_NAC_Mosaic_26N004E_50cmp\\index.html",
-  "WMTS_Capabiliites": "{MoonImage}\\Moon_eqc_LRO_NAC_Mosaic_26N004E_50cmp\\WMTSCapabilities.xml",
+  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_LRO_NAC_Mosaic_26N004E_50cmp\\WMTSCapabilities.xml",
   "MetaData": "{MoonImage}\\Moon_eqc_LRO_NAC_Mosaic_26N004E_50cmp\\metadata.html"
 }
