--- a/Moon_sp_AVGVISIB_85S_060M_201608_EARTH_SP/config.json
+++ b/Moon_sp_AVGVISIB_85S_060M_201608_EARTH_SP/config.json
@@ -1,28 +1,11 @@
 {
-  "ProjectionType": "NP",
-  "Title": "北极影像(60°以上,100m)",
+  "ProjectionType": "SP",
+  "Title": "南极区域平均地球可见性(60m)",
   "LayerID": "Moon_sp_AVGVISIB_85S_060M_201608_EARTH_SP",
   "Icon": "{MoonImage}\\Moon_sp_AVGVISIB_85S_060M_201608_EARTH_SP\\AVGVISIB_85S_060M_201608_EARTH_SP-120.png",
-  "BBOX": [-151740,-151740,151740,151740],
+  "BBOX": [-151740, -151740, 151740, 151740],
   "Abstract": "这个数据代表了月球南极地区的地球能见度，每小时的平均时间跨度为18.6年。由于我们的光源不是一个点，而是一个有限的圆盘，它的位置和大小可以改变，以研究从月球两极而不是太阳输入的地球可见度。这个数据的范围是85S-90S，分辨率为60米/像素。像素值代表地球能见度的百分比，图例说明了颜色与数值的映射关系。当使用这个数据时，请引用： Mazarico, E., et al. (2011), Illumination conditions of the lunar polar regions using LOLA topography, Icarus, Vol. 211, pp. 1066-1081, doi:10.1016/j.icarus.2010.10.030.",
-  "Projection": "PROJCS["ESRI PE String = PROJCS["Moon2000_npole",
-	GEOGCS["GCS_Moon",
-		DATUM["D_Moon_2000",SPHEROID["Moon_2000_IAU_IAG",1737400.0,0.0]],
-		PRIMEM["Reference_Meridian",0.0],UNIT["Degree",0.0174532925199433]],
-	PROJECTION["Stereographic_South_Pole"],
-	PARAMETER["false_easting",0.0],
-	PARAMETER["false_northing",0.0],
-	PARAMETER["central_meridian",0.0],
-	PARAMETER["standard_parallel_1",-90.0],UNIT["Meter",1.0]]",
-	GEOGCS["GCS_Moon",
-		DATUM["D_Moon_2000",SPHEROID["Moon_2000_IAU_IAG",1737400,0]],
-		PRIMEM["Reference_Meridian",0],UNIT["degree",0.0174532925199433]],
-	PROJECTION["Polar_Stereographic"],
-	PARAMETER["latitude_of_origin",-90],
-	PARAMETER["central_meridian",0],
-	PARAMETER["scale_factor",1],
-	PARAMETER["false_easting",0],
-	PARAMETER["false_northing",0],UNIT["metre",1,AUTHORITY["EPSG","9001"]]]",
+  "Projection": "urn:ogc:def:crs:IAU2000::30120",
   "Preview": "{MoonImage}\\Moon_sp_AVGVISIB_85S_060M_201608_EARTH_SP\\index.html",
   "WMTS_Capabilities": "{MoonImage}\\Moon_sp_AVGVISIB_85S_060M_201608_EARTH_SP\\WMTSCapabilities.xml",
   "MetaData": "{MoonImage}\\Moon_sp_AVGVISIB_85S_060M_201608_EARTH_SP\\metaData.html"
