--- a/Moon_sp_LRO_NAC_Mosaic_86S356E_50cmp/config.json
+++ b/Moon_sp_LRO_NAC_Mosaic_86S356E_50cmp/config.json
@@ -1,10 +1,10 @@
 {
   "ProjectionType": "SP",
-  "Title": "南极地形彩色山体阴影图(LOLA数据,87.5°以上,10m)",
+  "Title": "LRO_NAC_Mosaic_86S356E_50cmp",
   "LayerID": "Moon_sp_LRO_NAC_Mosaic_86S356E_50cmp",
   "Icon": "{MoonImage}\\Moon_sp_LRO_NAC_Mosaic_86S356E_50cmp\\LRO_LOLA_ClrShade_SPolar875_10m-120.png",
-  "BBOX": [-75840, -75840, 75840, 75840],
-  "Abstract": "这是原始极地 LOLA 数字高程模型 （DEM） 的彩色晕渲地貌。DEM 是月球的形状图（半径），分辨率为每像素 10 米，基于 LOLA 仪器通过 Spetember 2011 获取的测高数据。使用通用制图工具程序“表面”对地面轨迹进行插值和“混合”。地图值的半径为 1737400 m。",
+  "BBOX": [-33245,104242,15004.5,147083],
+  "Abstract": "这是用月球勘测轨道器相机（LROC）的窄角相机（NAC）图像生成的可见光图像马赛克，来自月球勘测轨道器任务。这些图像使用从LROC NAC立体图像（如果有的话）或LRO&apos;的月球轨道器激光高度计（LOLA）全球DEM创建的数字高程模型（DEM）进行正交。马赛克是在与收集单个LROC NAC图像相同的分辨率下生成的，即大约0.5米/像素。马赛克被水平地登记到LOLA全球DEM上。",
   "Projection": "urn:ogc:def:crs:IAU2000::30120",
   "Preview": "{MoonImage}\\Moon_sp_LRO_NAC_Mosaic_86S356E_50cmp\\index.html",
   "WMTS_Capabilities": "{MoonImage}\\Moon_sp_LRO_NAC_Mosaic_86S356E_50cmp\\WMTSCapabilities.xml",
