完善Moon_eqc_3He_*图层

--- a/Moon_eqc_3He_Dig_Here_Layer/config.json
+++ b/Moon_eqc_3He_Dig_Here_Layer/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO and Kaguya Multi Instruments 1895.21mpp, 3He Dig Here",
+    "Title": "月球潜在的氦-3沉积物分布(LRO and Kaguya Multi Instruments 1895.21mpp, 3He Dig Here)",
     "LayerID": "Moon_eqc_3He_Dig_Here_Layer",
     "Icon": "{MoonImage}\\Moon_eqc_3He_Dig_Here_Layer\\3He_Dig_Here_Layer-120.png",
     "BBOX": [
