--- a/Moon_eqc_3He_More_Likely_Layer/config.json
+++ b/Moon_eqc_3He_More_Likely_Layer/config.json
@@ -1,6 +1,6 @@
 {
     "ProjectionType": "EQ",
-    "Title": "LRO and Kaguya Multi Instruments 1895.21mpp, 3He More Likely",
+    "Title": "月球潜在的氦-3沉积物分布(LRO and Kaguya Multi Instruments 1895.21mpp, 3He More Likely)",
     "LayerID": "Moon_eqc_3He_More_Likely_Layer",
     "Icon": "{MoonImage}\\Moon_eqc_3He_More_Likely_Layer\\3He_More_Likely_Layer-120.png",
     "BBOX": [
