--- a/Moon_eqc_A15_60x60km.0_2.eq/config.json
+++ b/Moon_eqc_A15_60x60km.0_2.eq/config.json
@@ -1,17 +1,12 @@
 {
-    "ProjectionType": "EQ",
-    "Title": "LRO Narrow Angle Camera, Mosaic Apollo 15",
-    "LayerID": "Moon_eqc_A15_60x60km.0_2.eq",
-    "Icon": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\A15_60x60km.0_2.eq-120.png",
-    "BBOX": [
-        2.6406573,
-        25.1406586,
-        4.619347,
-        27.1193482
-    ],
-    "Abstract": "这是一个月球侦察轨道飞行器（LRO）窄角相机（NAC）马赛克，以阿波罗15号着陆点为中心，范围为60x60km。每个NAC图像在ISIS3中以50cm像素的分辨率进行处理，颜色平衡，并合成为单个输出。",
-    "Projection": "urn:ogc:def:crs:EPSG::104903\n",
-    "Preview": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\index.html",
-    "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\MetaData.html"
+  "ProjectionType": "EQ",
+  "Title": "Apollo 15 着陆区高分影像(LRO Narrow Angle Camera, Mosaic Apollo 15)",
+  "LayerID": "Moon_eqc_A15_60x60km.0_2.eq",
+  "Icon": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\A15_60x60km.0_2.eq-120.png",
+  "BBOX": [2.6406573, 25.1406586, 4.619347, 27.1193482],
+  "Abstract": "这是一个月球侦察轨道飞行器（LRO）窄角相机（NAC）马赛克，以阿波罗15号着陆点为中心，范围为60x60km。每个NAC图像在ISIS3中以50cm像素的分辨率进行处理，颜色平衡，并合成为单个输出。",
+  "Projection": "urn:ogc:def:crs:EPSG::104903\n",
+  "Preview": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\index.html",
+  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\WMTSCapabilities.xml",
+  "MetaData": "{MoonImage}\\Moon_eqc_A15_60x60km.0_2.eq\\MetaData.html"
 }
