--- a/Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast/config.json
+++ b/Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast/config.json
@@ -1,17 +1,12 @@
 {
-    "ProjectionType": "EQ",
-    "Title": "LRO LROC Image Mosaic 26cm, Apollo 11",
-    "LayerID": "Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast",
-    "Icon": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\apollo11_26cm_mosaic_byte_geo_1_2_highContrast-120.png",
-    "BBOX": [
-        23.4484963,
-        0.1464532,
-        23.5396925,
-        1.1149077
-    ],
-    "Abstract": "待定",
-    "Projection": "GEOGCS['Moon 2000',\n\tDATUM['D_Moon_2000',SPHEROID['Moon_2000_IAU_IAG',1737400,0]],\n\tPRIMEM['Greenwich',0],UNIT['degree',0.0174532925199433]]\n",
-    "Preview": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\index.html",
-    "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\WMTSCapabilities.xml",
-    "MetaData": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\MetaData.html"
+  "ProjectionType": "EQ",
+  "Title": "Apollo 11着陆区高分影像(LRO LROC Image Mosaic 26cm, Apollo 11)",
+  "LayerID": "Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast",
+  "Icon": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\apollo11_26cm_mosaic_byte_geo_1_2_highContrast-120.png",
+  "BBOX": [23.4484963, 0.1464532, 23.5396925, 1.1149077],
+  "Abstract": "待定",
+  "Projection": "GEOGCS['Moon 2000',\n\tDATUM['D_Moon_2000',SPHEROID['Moon_2000_IAU_IAG',1737400,0]],\n\tPRIMEM['Greenwich',0],UNIT['degree',0.0174532925199433]]\n",
+  "Preview": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\index.html",
+  "WMTS_Capabilities": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\WMTSCapabilities.xml",
+  "MetaData": "{MoonImage}\\Moon_eqc_apollo11_26cm_mosaic_byte_geo_1_2_highContrast\\MetaData.html"
 }
